WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234728
[LFC][IFC] Do not let Layout geometry types leak into InlineDisplay::Box
https://bugs.webkit.org/show_bug.cgi?id=234728
Summary
[LFC][IFC] Do not let Layout geometry types leak into InlineDisplay::Box
alan
Reported
2021-12-28 10:13:34 PST
ssia
Attachments
Patch
(17.32 KB, patch)
2021-12-28 10:19 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(17.36 KB, patch)
2021-12-28 10:32 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-12-28 10:19:30 PST
Created
attachment 448049
[details]
Patch
Antti Koivisto
Comment 2
2021-12-28 10:26:35 PST
Comment on
attachment 448049
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=448049&action=review
> Source/WebCore/platform/graphics/FloatRect.h:298 > +inline void FloatRect::inflate(float dx, float dy, float dmaxX, float dmaxY)
what is dmax?
alan
Comment 3
2021-12-28 10:32:02 PST
Created
attachment 448052
[details]
Patch
EWS
Comment 4
2021-12-28 13:17:18 PST
Committed
r287475
(
245610@main
): <
https://commits.webkit.org/245610@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448052
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-12-28 13:18:17 PST
<
rdar://problem/86964344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug